--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://RDimov04.github.io/Portfolio",
+  "homepage": "https://RDimov04.github.io/portfolio",
   "name": "portfolio",
   "private": true,
   "version": "0.0.0",
